--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+  
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">
+  
     <link rel="stylesheet" href="css/style.css">
     
     <title>Omnifood</title>
@@ -14,7 +18,8 @@
         <div class="hero">
             <div class="hero-text-box">
                 <h1 class="heading-primary">A healthy meal delivered to your door, 
-                    every single day</h1>
+                    every single day
+                </h1>
                     <p class="hero-description">
                         The smart 365-days-per-year food subscription that will make 
                         you eat healthy again. Tailored to your personal tastes and
@@ -23,7 +28,32 @@
                     </p>
                     <a href="#" class="btn btn--full margin-right-sm">Start eating well</a>
                     <a href="#" class="btn btn--outline">Learn more &darr;</a>
+                <div class="delivered-meals">
+                    <div class="delivered-img">
+                        <img src="img/customers/customer-1.jpg"
+                        alt="Customer photo"
+                        />
+                        <img src="img/customers/customer-2.jpg"
+                        alt="Customer photo"
+                        />
+                        <img src="img/customers/customer-3.jpg"
+                        alt="Customer photo"
+                        />
+                        <img src="img/customers/customer-4.jpg"
+                        alt="Customer photo"
+                        />
+                        <img src="img/customers/customer-5.jpg"
+                        alt="Customer photo"
+                        />
+                        <img src="img/customers/customer-6.jpg"
+                        alt="Customer photo"
+                        />
+                    </div>
+                    <p class="delivered-text"><span>
+                        250,000+</span> meals delivered last year!
+                    </p>
                 </div>
+            </div>
             <div class="hero-mg-box">
                 <img src="img/hero.png" class="hero-img" alt="Woman enjoying food, 
                 meals in storage container, and fuod bowls on a table" />
