--- a/index.html
+++ b/index.html
@@ -14,51 +14,66 @@
     <title>Omnifood</title>
 </head>
 <body>
-    <section class="section-hero">
-        <div class="hero">
-            <div class="hero-text-box">
-                <h1 class="heading-primary">A healthy meal delivered to your door, 
-                    every single day
-                </h1>
-                    <p class="hero-description">
-                        The smart 365-days-per-year food subscription that will make 
-                        you eat healthy again. Tailored to your personal tastes and
-                        nutritional needs. We have delivered 250,000+ meals last 
-                        year!
-                    </p>
-                    <a href="#" class="btn btn--full margin-right-sm">Start eating well</a>
-                    <a href="#" class="btn btn--outline">Learn more &darr;</a>
-                <div class="delivered-meals">
-                    <div class="delivered-img">
-                        <img src="img/customers/customer-1.jpg"
-                        alt="Customer photo"
-                        />
-                        <img src="img/customers/customer-2.jpg"
-                        alt="Customer photo"
-                        />
-                        <img src="img/customers/customer-3.jpg"
-                        alt="Customer photo"
-                        />
-                        <img src="img/customers/customer-4.jpg"
-                        alt="Customer photo"
-                        />
-                        <img src="img/customers/customer-5.jpg"
-                        alt="Customer photo"
-                        />
-                        <img src="img/customers/customer-6.jpg"
-                        alt="Customer photo"
-                        />
+    <header class="header">
+        <img class="logo" alt="Omnifood Logo" src="img/omnifood-logo.png" />
+        <nav class="main-nav">
+            <ul class="main-nav-list">
+                <li><a class="main-nav-link" href="#">Section 1</a></li>
+                <li><a class="main-nav-link" href="#">Section 2</a></li>
+                <li><a class="main-nav-link" href="#">Section 3</a></li>
+                <li><a class="main-nav-link" href="#">Section 4</a></li>
+                <li><a class="main-nav-link nav-cta" href="#">Section 5</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+
+        <section class="section-hero">
+            <div class="hero">
+                <div class="hero-text-box">
+                    <h1 class="heading-primary">A healthy meal delivered to your door, 
+                        every single day
+                    </h1>
+                        <p class="hero-description">
+                            The smart 365-days-per-year food subscription that will make 
+                            you eat healthy again. Tailored to your personal tastes and
+                            nutritional needs.
+                        </p>
+                        <a href="#" class="btn btn--full margin-right-sm">Start eating well</a>
+                        <a href="#" class="btn btn--outline">Learn more &darr;</a>
+                    <div class="delivered-meals">
+                        <div class="delivered-img">
+                            <img src="img/customers/customer-1.jpg"
+                            alt="Customer photo"
+                            />
+                            <img src="img/customers/customer-2.jpg"
+                            alt="Customer photo"
+                            />
+                            <img src="img/customers/customer-3.jpg"
+                            alt="Customer photo"
+                            />
+                            <img src="img/customers/customer-4.jpg"
+                            alt="Customer photo"
+                            />
+                            <img src="img/customers/customer-5.jpg"
+                            alt="Customer photo"
+                            />
+                            <img src="img/customers/customer-6.jpg"
+                            alt="Customer photo"
+                            />
+                        </div>
+                        <p class="delivered-text"><span>
+                            250,000+</span> meals delivered last year!
+                        </p>
                     </div>
-                    <p class="delivered-text"><span>
-                        250,000+</span> meals delivered last year!
-                    </p>
+                </div>
+                <div class="hero-mg-box">
+                    <img src="img/hero.png" class="hero-img" alt="Woman enjoying food, 
+                    meals in storage container, and fuod bowls on a table" />
                 </div>
             </div>
-            <div class="hero-mg-box">
-                <img src="img/hero.png" class="hero-img" alt="Woman enjoying food, 
-                meals in storage container, and fuod bowls on a table" />
-            </div>
-        </div>
-    </section>
+        </section>
+    </main>
 </body>
 </html>
