--- a/index.html
+++ b/index.html
@@ -360,6 +360,8 @@
                 </h2>
             </div>
 
+
+
             <div class="container grid grid--2-cols">
                 <div class="pricing-plan pricing-plan--starter">
                     <header class="plan-header">
@@ -425,6 +427,46 @@
 
                 </div>
             </div>
+
+            <div class="container grid grid--4-cols">
+                <div class="feature">
+                    <ion-icon class="feature-icon" name="infinite-outline"></ion-icon>
+                    <p class="feature-title">Never cook again!</p>
+                        <p class="feature-text">
+                        Our subscriptions cover 365 days per year, 
+                        even including major holidays.
+                        </p>
+                </div>  
+
+                <div class="feature">
+                    <ion-icon class="feature-icon" name="infinite-outline"></ion-icon>
+                    <p class="feature-title">Local and organic</p>
+                        <p class="feature-text">
+                            Our cooks only use local, fresh, and organic products to 
+                            prepare your meals.
+                        </p>
+                </div>  
+
+                <div class="feature">
+                    <ion-icon class="feature-icon" name="infinite-outline"></ion-icon>
+                    <p class="feature-title">No waste</p>
+                        <p class="feature-text">
+                            All our partners only use reusable containers to package all your meals.
+                            Pause anytime: Going on vacation? Just pause your subscription, and we 
+                            refund unused days.
+                        </p>
+                </div>  
+
+                <div class="feature">
+                    <ion-icon class="feature-icon" name="pause-outline"></ion-icon>
+                    <p class="feature-title">Pause anytime</p>
+                        <p class="feature-text">
+                            Going on vacation? Just pause your subscription, and we refund unused days.
+                        </p>
+                </div>  
+                 
+            </div>
+
         </section>
     </main>
 
