cta section, pt 1

--- a/index.html
+++ b/index.html
@@ -480,10 +480,13 @@
 
 
         <section class="section-cta">
-            <div class="container cta">
-                <div class="cta-text-box">CTA</div>
-                <div class="cta-img-box" role="img" aria-label="woman enjoy food"></div>
-            </div>
+            <div class="container">
+                <div class="cta">
+
+                    <div class="cta-text-box">CTA</div>
+                    <div class="cta-img-box" role="img" aria-label="woman enjoy food"></div>
+                </div>
+                </div>
         </section>
 
     </main>
