queries, breakpoints, desktop & tablets

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    
+    <!-- Always include this line of code!!! -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,6 +13,7 @@
   
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/queries.css">
     
     <title>Omnifood</title>
 </head>
@@ -71,7 +74,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="hero-mg-box">
+                <div class="hero-img-box">
                     <img src="img/hero.png" class="hero-img" alt="Woman enjoying food, 
                     meals in storage container, and fuod bowls on a table" />
                 </div>
