mobile, smaller tablets and phones

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <a href="#">
             <img class="logo" alt="Omnifood Logo" src="img/omnifood-logo.png" />
         </a>
+
+        
         <nav class="main-nav">
             <ul class="main-nav-list">
                 <li><a class="main-nav-link" href="#">How it works</a></li>
@@ -31,6 +33,12 @@
                 <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
             </ul>
         </nav>
+
+        <button class="btn-mobile-nav">
+            <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+            <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+        </button>
+
     </header>
 
     <main>
@@ -555,7 +563,7 @@
                     Inc. All rights reserved. 
                 </p>
             </div>
-            <div class="adress-col">
+            <div class="address-col">
                 <p class="footer-heading">Contact us</p>
                 <address class="contacts">
                     <p class="address">623 Harrison St., 2nd Floor, San Francisco, 
