--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/queries.css">
+
+    <script defer src="js/script.js"></script>
     
     <title>Omnifood</title>
 </head>
@@ -26,11 +28,11 @@
         
         <nav class="main-nav">
             <ul class="main-nav-list">
-                <li><a class="main-nav-link" href="#">How it works</a></li>
-                <li><a class="main-nav-link" href="#">Meals</a></li>
-                <li><a class="main-nav-link" href="#">Testimonials</a></li>
-                <li><a class="main-nav-link" href="#">Pricing</a></li>
-                <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
+                <li><a class="main-nav-link" href="#how">How it works</a></li>
+                <li><a class="main-nav-link" href="#meals">Meals</a></li>
+                <li><a class="main-nav-link" href="#testimonials">Testimonials</a></li>
+                <li><a class="main-nav-link" href="#pricing">Pricing</a></li>
+                <li><a class="main-nav-link nav-cta" href="#cta">Try for free</a></li>
             </ul>
         </nav>
 
@@ -54,8 +56,9 @@
                             you eat healthy again. Tailored to your personal tastes and
                             nutritional needs.
                         </p>
-                        <a href="#" class="btn btn--full margin-right-sm">Start eating well</a>
-                        <a href="#" class="btn btn--outline">Learn more &darr;</a>
+                        <a href="#cta" class="btn btn--full margin-right-sm">Start eating well</a>
+
+                        <a href="#how" class="btn btn--outline">Learn more &darr;</a>
                     <div class="delivered-meals">
                         <div class="delivered-img">
                             <img src="img/customers/customer-1.jpg"
@@ -104,7 +107,7 @@
             </div>
         </section>
 
-        <section class="section-how">
+        <section class="section-how" id="how">
             <div class="container">
                 <span class="subheading">How it works</span>
                 <h2 class="heading-secondary">
@@ -173,7 +176,7 @@
             </div>
         </section>
 
-        <section class="section-meals">
+        <section class="section-meals" id="meals">
             <div class="container center-text">
                 <span class="subheading">Meals</span>
                 <h2 class="heading-secondary">
@@ -249,7 +252,7 @@
 
         </section>
 
-        <section class="section-testimonials ">
+        <section class="section-testimonials" id="testimonials">
 
                 <div class="testimonials-container">
                 <span class="subheading">Testimonials</span>
@@ -365,7 +368,7 @@
             </div>
         </section>
 
-        <section class="section-pricing">
+        <section class="section-pricing" id="pricing">
             <div class="container">
                 <span class="subheading">Pricing</span>
                 <h2 class="heading-secondary">
@@ -492,7 +495,7 @@
         </section>
 
 
-        <section class="section-cta">
+        <section class="section-cta" id="cta">
             <div class="container">
                 <div class="cta">
 
@@ -559,7 +562,7 @@
                         name="logo-twitter"></ion-icon></a></li>
                 </ul>
 
-                <p class="copyright">Copyright &copy; 2027 by Omnifood,
+                <p class="copyright">Copyright &copy; <span class="year">2027</span> by Omnifood,
                     Inc. All rights reserved. 
                 </p>
             </div>
